--- a/public/views/receptionist/index.html
+++ b/public/views/receptionist/index.html
@@ -99,6 +99,7 @@
               <th class="px-4 py-2">Number</th>
               <th class="px-4 py-2">Type</th>
               <th class="px-4 py-2">Price</th>
+              <th class="px-4 py-2">Status</th>
               <th class="px-4 py-2 text-right">View</th>
             </tr>
           </thead>
@@ -330,6 +331,7 @@ btn?.addEventListener('click', () => {
             <td class="px-4 py-2">${r.number}</td>
             <td class="px-4 py-2">${r.type}</td>
             <td class="px-4 py-2">${r.price} PKR</td>
+            <td class="px-4 py-2">${r.status} PKR</td>
             <td class="px-4 py-2 text-right">
               <button data-id="${r._id}" class="view-btn px-2 py-1 bg-gray-200 rounded">View</button>
             </td>
